[gd_scene load_steps=15 format=1]

[ext_resource path="res://scripts/Ditches.tres.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/GameControl.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 30.5818, 5.89281 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 3.50401, 31 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 6.73613, 10.8116 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 30.2688, 30.9353 )

[sub_resource type="Animation" id=5]

resource/name = "lost_left_bottom"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1, 1.9, 2 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( -50, 50 ), Vector2( -100, 100 ), Vector2( 0, 0 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1, 1.9, 2 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ 0.0, 180.0, 360.0, 0.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:transform/scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 1, 1.9, 2 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ), Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ] }

[sub_resource type="Animation" id=6]

resource/name = "lost_left_top"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1, 1.9, 2 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( -50, -50 ), Vector2( -100, -100 ), Vector2( 0, 0 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1, 1.9, 2 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ 0.0, 180.0, 360.0, 0.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:transform/scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 1, 1.9, 2 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ), Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ] }

[sub_resource type="Animation" id=7]

resource/name = "lost_right_bottom"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1, 1.9, 2 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( 50, 50 ), Vector2( 100, 100 ), Vector2( 0, 0 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1, 1.9, 2 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ 0.0, 180.0, 360.0, 0.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:transform/scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 1, 1.9, 2 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ), Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ] }

[sub_resource type="Animation" id=8]

resource/name = "lost_right_top"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1, 1.9, 2 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( 50, -50 ), Vector2( 100, -100 ), Vector2( 0, 0 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1, 1.9, 2 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ 0.0, 180.0, 360.0, 0.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:transform/scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 1, 1.9, 2 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ), Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ] }

[sub_resource type="Animation" id=9]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray(  ), "transitions":FloatArray(  ), "update":0, "values":[  ] }
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.5, 1 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 360.0, 180.0, 0.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:transform/scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 10, 10 ), Vector2( 1, 1 ) ] }

[sub_resource type="RectangleShape2D" id=10]

custom_solver_bias = 0.0
extents = Vector2( 36.9767, 36.5432 )

[node name="World" type="Node2D"]

transform/pos = Vector2( 90, 65 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

transform/pos = Vector2( 870.087, 478.464 )
transform/scale = Vector2( 30.0027, 16.9833 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1.07843, 0, 0, 1.06667, -0.0416243, 38.1618 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 1 )
shapes/1/transform = Matrix32( 1.07843, 0, 0, 1.06667, 0.520496, -38.2641 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 2 )
shapes/2/transform = Matrix32( 1.07843, 0, 0, 1.06667, -35.7943, 0.0423667 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 2 )
shapes/3/transform = Matrix32( 1.07843, 0, 0, 1.06667, 36.0626, -0.827334 )
shapes/3/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="ResetTrigger_Top_Left" type="Area2D" parent="StaticBody2D"]

editor/display_folded = true
transform/scale = Vector2( 1.07843, 1.06667 )
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 0.927273, 0, 0, 0.9375, -30.1558, -29.7922 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="Trigger" type="CollisionShape2D" parent="StaticBody2D/ResetTrigger_Top_Left"]

transform/pos = Vector2( -30.1558, -29.7922 )
transform/scale = Vector2( 0.927273, 0.9375 )
shape = SubResource( 3 )
trigger = true
_update_shape_index = 0

[node name="ResetTrigger_Top_Right" type="Area2D" parent="StaticBody2D"]

editor/display_folded = true
transform/scale = Vector2( 1.07843, 1.06667 )
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 0.927273, 0, 0, 0.9375, 30.235, -30.6084 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="Trigger" type="CollisionShape2D" parent="StaticBody2D/ResetTrigger_Top_Right"]

transform/pos = Vector2( 30.235, -30.6084 )
transform/scale = Vector2( 0.927273, 0.9375 )
shape = SubResource( 3 )
trigger = true
_update_shape_index = 0

[node name="ResetTrigger_Bottom_Right" type="Area2D" parent="StaticBody2D"]

editor/display_folded = true
transform/scale = Vector2( 1.07843, 1.06667 )
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 0.927273, 0, 0, 0.9375, 30.3932, 29.5201 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="Trigger" type="CollisionShape2D" parent="StaticBody2D/ResetTrigger_Bottom_Right"]

transform/pos = Vector2( 30.3932, 29.5201 )
transform/scale = Vector2( 0.927273, 0.9375 )
shape = SubResource( 3 )
trigger = true
_update_shape_index = 0

[node name="ResetTrigger_Bottom_Left" type="Area2D" parent="StaticBody2D"]

editor/display_folded = true
transform/scale = Vector2( 1.07843, 1.06667 )
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 0.927273, 0, 0, 0.9375, -29.9975, 30.3364 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="Trigger" type="CollisionShape2D" parent="StaticBody2D/ResetTrigger_Bottom_Left"]

transform/pos = Vector2( -29.9975, 30.3364 )
transform/scale = Vector2( 0.927273, 0.9375 )
shape = SubResource( 3 )
trigger = true
_update_shape_index = 0

[node name="Background" type="Sprite" parent="StaticBody2D"]

texture = ExtResource( 2 )
__meta__ = { "_edit_lock_":true }

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]

transform/pos = Vector2( -0.0416243, 38.1618 )
transform/scale = Vector2( 1.07843, 1.06667 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = { "_edit_lock_":true }

[node name="CollisionShape2D1" type="CollisionShape2D" parent="StaticBody2D"]

transform/pos = Vector2( 0.520496, -38.2641 )
transform/scale = Vector2( 1.07843, 1.06667 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 1
__meta__ = { "_edit_lock_":true }

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="StaticBody2D"]

transform/pos = Vector2( -35.7943, 0.0423667 )
transform/scale = Vector2( 1.07843, 1.06667 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 2
__meta__ = { "_edit_lock_":true }

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]

transform/pos = Vector2( 36.0626, -0.827334 )
transform/scale = Vector2( 1.07843, 1.06667 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 3
__meta__ = { "_edit_lock_":true }

[node name="Player" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 420.314, 416.034 )

[node name="RigidBody" parent="Player"]

mass = 1.0
damp_override/linear = 10.0

[node name="SpawnPoint" type="Node2D" parent="."]

transform/pos = Vector2( 887.887, 432.666 )

[node name="Game" type="Node2D" parent="SpawnPoint"]

script/script = ExtResource( 4 )
__meta__ = { "_edit_lock_":true }

[node name="RigidBody2D" type="RigidBody2D" parent="SpawnPoint/Game"]

input/pickable = false
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = false
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
__meta__ = { "_edit_lock_":true }

[node name="AnimatedSprite" type="Sprite" parent="SpawnPoint/Game/RigidBody2D"]

texture = ExtResource( 2 )
__meta__ = { "_edit_lock_":true }

[node name="Collision" type="CollisionShape2D" parent="SpawnPoint/Game/RigidBody2D"]

shape = SubResource( 4 )
trigger = false
_update_shape_index = 0
__meta__ = { "_edit_lock_":true }

[node name="AnimationPlayer" type="AnimationPlayer" parent="SpawnPoint/Game/RigidBody2D"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/lost_left_bottom = SubResource( 5 )
anims/lost_left_top = SubResource( 6 )
anims/lost_right_bottom = SubResource( 7 )
anims/lost_right_top = SubResource( 8 )
anims/roll_in = SubResource( 9 )
next/lost_left_bottom = ""
next/lost_left_top = ""
next/lost_right_bottom = ""
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "roll_in"

[node name="Area2D" type="Area2D" parent="SpawnPoint/Game/RigidBody2D"]

visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 10 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoint/Game/RigidBody2D/Area2D"]

shape = SubResource( 10 )
trigger = true
_update_shape_index = 0


[editable path="Player"]
